# pydep

./: .gitignore  .pre-commit-config.yaml  pydep-run.py  pyproject.toml
pydep/: setup_cfg.py
