[tool.poetry]
name = "pydep"
version = "0.1.0"
description = "pydep is a simple module / command line tool that will print the dependencies of a python project."
authors = ["Beyang Liu <beyang@sourcegraph.com>", "Helio Chissini de Castro <helio@kde.org>"]
license = "BSD-3-Clause License"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
mypy = "^0.931"
isort = "^5.10.1"
black = {version = "^21.12b0", allow-prereleases = true}
wheel = {version = "^0.37.1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
